--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <meta charset="utf-8">
-    <title>#1 Estimating tool</title>
+    <title>Taping calculator</title>
   <link rel="stylesheet" href="public/css/styles.css">
     <link rel="icon" href="images/DMfav.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
