--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
 
       <div class="bottom-container1">
-        <h2>Get in touch with Drywall Magana and follow us</h2>
+        <h2 style="text-align: center">Get in touch with Drywall Magana and follow us</h2>
         <a class="btn" href="mailto:pegaso1998-10@hotmail.com">EMAIL DRYWALL MAGANA!</a>
         <a class="btn" href="tel:+1-437-220-7887">CALL DRYWALL MAGANA!</a>
         <a class="btn" href="sms:+1-437-220-7887">TEXT DRYWALL MAGANA!</a>
